<resources>
    <string name="app_nameIS">Inicio de sesión</string>
    <string name="Nombre_usuario">Nombre</string>
    <string name="Email">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="BotonRegistrar">Registrar</string>
    <string name="BotonInicioSesion">Ingresar</string>
    <string name="app_nameCD">Controlador de Dispensador</string>
    <string name="PantallaInformación">Información</string>
    <string name="BotonIniciar">Iniciar</string>
    <string name="BotonCerrarSesion">Cerrar sesión</string>
    <string name="logo">Logo</string>
    <string name="Volver">Volver</string>
    <string name="dispositivos_vinculados">Dispositivos vinculados</string>
    <string name="enviar">Enviar</string>
</resources>
